# flap-compiler

./: Cargo.toml  README.md  out.clac
grammars/: clac.pest  flap.pest
grammers/: flap.pest
samples/: bitwise.flap  comparisons.flap  cooked_closures.flap  expr_assignment.flap  fact.flap  function_def_1.flap  game_of_life.flap  gol_mvp.flap  multiple_if_statements.flap  return_expr.flap  return_local.flap  simple.flap  simpler.flap  test.flap
src/: ast.rs  codegen.rs  flap.pest  main.rs  middleware.rs  parser.rs  type_check.rs
src/codegen/: builtins.rs  clac.rs  ir.rs  mutation.rs  post_process.rs
