[package]
name = "flap-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
lazy_static = "1.5.0"
parse_int = "0.9.0"
pest = "2.8.2"
pest_derive = "2.8.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
